added system proper versions of prompt generator and table generator. added new python files in the django app folder

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -141,11 +141,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 1 (System Proper):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "# CONTEXT V1\n",
+    "template = \"\"\" Question:\\n Generate test case for the following UI element: : {question} \"\"\"\n",
+    "model_str = \"llama3.1\"\n",
+    "\n",
+    "# Prompt Generator + LLM\n",
+    "# Load Model Chain\n",
+    "def load_model_chain(template : str =  template, model_str : str = model_str):\n",
+    "    # TODO : Plug In Fine Tuned Model\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    model = OllamaLLM(model=model_str)\n",
+    "    chain = prompt | model\n",
+    "    return chain\n",
+    "\n",
+    "# Create Test Case Data\n",
+    "def create_test_cases(data):\n",
+    "    \n",
+    "    # Load LLM Chain\n",
+    "    chain = load_model_chain()\n",
+    "\n",
+    "    # Return Data\n",
+    "    return_data = []\n",
+    "    \n",
+    "    for item in data:\n",
+    "        return_data.append(chain.invoke({\"question\": str(item)}))\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain()\n",
+    "\n",
+    "    return return_data\n"
+   ]
   }
  ],
  "metadata": {
