--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -131,24 +131,14 @@
     "            \"input\" : in_data, \n",
     "            \"instruction\" : instruction_data}\n",
     "    csv_from_test_case_batches(\"fine_tuning_dataset\", data)\n",
-    "    return dataframe_init(data)    \n",
-    "\n",
-    "# System Proper Parameters\n",
-    "def create_table_dataset(scraped_data, llm_output):\n",
-    "    # TODO : After Dataset Generator Development\n",
-    "\n",
-    "    id = None\n",
-    "    precondition = None\n",
-    "    test_steps = None\n",
-    "    expected_result = None \n",
-    "    actual_result = \"Pass/Fail\"\n",
-    "    data = {\"Test Case ID\" : id,\n",
-    "            \"Precondition\" : precondition,\n",
-    "            \"Test Steps\" : test_steps,\n",
-    "            \"Expected Result\" : expected_result,\n",
-    "            \"Actual Result\" : actual_result}\n",
-    "\n",
-    "    return dataframe_init(data)"
+    "    return dataframe_init(data)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 1: System Proper Table Generation"
    ]
   },
   {
@@ -156,7 +146,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# System Proper Parameters\n",
+    "def create_table_dataset(llm_output):\n",
+    "    # TODO : After Dataset Generator Development\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = 0\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "\n",
+    "        # Test Case ID\n",
+    "        id.append(i+1)\n",
+    "\n",
+    "        # Test Case Objective\n",
+    "        objective.append(split_test_case[0])\n",
+    "\n",
+    "        # Test Case Precondition\n",
+    "        precondition.append(split_test_case[1])\n",
+    "\n",
+    "        # Test Case Steps \n",
+    "        test_steps.append(split_test_case[2])\n",
+    "\n",
+    "        # Test Case Expected Output\n",
+    "        expected_result.append(split_test_case[3])\n",
+    "\n",
+    "        # Test Case Actual Result\n",
+    "        actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)"
+   ]
   }
  ],
  "metadata": {
