added todo plans for django backend implementation. added an additional example to prompt context

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,11 +150,13 @@
     "Example Input:\n",
     "Link Element: Home with URL : https://bicol-u.edu.ph/\n",
     "Link Element: Academics with URL : https://bicol-u.edu.ph/#\n",
+    "Link Element 'Battle of New Orleans' With URL https://en.wikipedia.org/wiki/Battle_of_New_Orleans   \n",
     "...\n",
     "\n",
     "Example Output:\n",
     "\"Verify the functionality of the Link Element 'Home'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Home\\'' '3. Verify if the webpage opens in a new tab/window.'\"~\"Webpage 'https://bicol-u.edu.ph/' should open in a new tab/window.\"\n",
     "\"Verify the functionality of the Link Element 'Academics'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Academics\\'' '3. Verify if the link url changes to \\'https://bicol-u.edu.ph/#\\'' '4. Verify if a dropdown below \\'Academics\\' is visible'\"~\"A dropdown should show below 'Academics', but the webpage does not change\"\n",
+    "\"Verify the functionality of the Link Element 'Battle of New Orleans'\"~\"The user is on the webpage 'https://en.wikipedia.org/'\"~\"'1. User navigates to the webpage 'https://en.wikipedia.org/' '' '2. Click on Link Element 'Battle of New Orleans'' '3. Verify if the link url changes to 'https://en.wikipedia.org/wiki/Battle_of_New_Orleans' '4. Verify if the webpage opens in a new tab/window'\"~\"Webpage 'https://en.wikipedia.org/wiki/Battle_of_New_Orleans/' should open in a new tab/window.\"\n",
     "...\n",
     "\n",
     "Here is the UI element : {question}\n",
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,9 +227,9 @@
      "output_type": "stream",
      "text": [
       "Welcome to Dataset Generator V1\n",
-      "Scraping Finished In : 25399.633169174194, ms\n",
+      "Scraping Finished In : 63298.93684387207, ms\n",
       "This will take a while to complete: Please wait by doing other things. You will receive a message once generation is complete.\n",
-      "Generation Finished In : 4609227.4215221405, ms\n",
+      "Generation Finished In : 4344326.324701309, ms\n",
       "Dataset is Generated as a CSV File. Please rename it before running this notebook again\n"
      ]
     }
