--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -6993,7 +6993,7 @@
     "            if (input_tag.get_attribute('type') == \"submit\"):\n",
     "                store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")} {input_field_disabled}\"\n",
     "            else:\n",
-    "                store = f\"{input_field_name} {input_field_type} {input_field_required} {input_field_value} {input_field_placeholder} {input_field_readonly} {input_field_disabled} {input_field_disabled} {input_field_autocomplete}\"\n",
+    "                store = f\"{input_field_name} {input_field_type} {input_field_required} {input_field_value} {input_field_placeholder} {input_field_readonly} {input_field_disabled} {input_field_autocomplete}\"\n",
     "            data.append(store)\n",
     "            \n",
     "    # Close the browser\n",
@@ -7002,6 +7002,27 @@
     "    ## RETURN COMPILED ELEMENT DATA ##\n",
     "    return data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 2: Polished Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
