planning todos and designing for scraper and prompt_generator's next cycle

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -200,7 +200,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CONTEXT V2\n",
+    "# Aim to fix:\n",
+    "#   - url concern\n",
+    "#   - \n",
+    "\n",
+    "template = \"\"\"\n",
+    "You are a quality assurance expert that generates functional test cases for websites. You take in a UI element and you generate a functional test case for usability.\n",
+    "\n",
+    "Some UI elements have a link attached to them and other properties.\n",
+    "ONLY output in the following format: \n",
+    "\"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
+    "DO NOT output any other text. DO NOT output 'Here are the test cases...', your output should be like the example output below.\n",
+    "\n",
+    "Example Input:\n",
+    "Link Element: Home with URL : https://bicol-u.edu.ph/\n",
+    "Link Element: Academics with URL : https://bicol-u.edu.ph/#\n",
+    "...\n",
+    "\n",
+    "Example Output:\n",
+    "\"Verify the functionality of the Link Element 'Home'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Home\\'' '3. Verify if the webpage opens in a new tab/window.'\"~\"Webpage 'https://bicol-u.edu.ph/' should open in a new tab/window.\"\n",
+    "\"Verify the functionality of the Link Element 'Academics'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Academics\\'' '3. Verify if the link url changes to \\'https://bicol-u.edu.ph/#\\'' '4. Verify if a dropdown below \\'Academics\\' is visible'\"~\"A dropdown should show below 'Academics', but the webpage does not change\"\n",
+    "...\n",
+    "\n",
+    "Here is the UI element : {question}\n",
+    "The ui element is from the following website : {url}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Generate a usability test case for the following UI element:\n",
+    "\n",
+    "UI Element: Link\n",
+    "Element Name: 'All News'\n",
+    "\n",
+    "Output should include:\n",
+    "1. Objectives for the link element\n",
+    "2. Preconditions for the link element\n",
+    "3. Test Steps for the link element\n",
+    "4. Expected Output for the link element\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# V2 Template\n",
+    "# TODO : Improve UI Element format for prompting\n",
+    "# TODO : Test against input texts more\n",
+    "# Used Techniques : Few shot prompting, specify context, and specify format.\n",
+    "\n",
+    "template_2 = \"\"\"\n",
+    "You are a quality assurance expert that generates functional test cases (usability) for websites. \n",
+    "\n",
+    "Generate a functional test case for usability for the following UI Element:\n",
+    "{ui_element}\n",
+    "The UI Element is from the following link:\n",
+    "{url}\n",
+    "\n",
+    "Output should be in the form:\n",
+    "\"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Output\"\n",
+    "\n",
+    "Example Input:\n",
+    "Link Element: Home with URL : https://bicol-u.edu.ph/ from url : https://bicol-u.edu.ph/\n",
+    "Link Element 'Battle of New Orleans' With URL https://en.wikipedia.org/wiki/Battle_of_New_Orleans from url : https://en.wikipedia.org/\n",
+    "\n",
+    "Example Output:\n",
+    "\"Verify the functionality of the Link Element 'Home'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Home\\'' '3. Verify if the webpage opens in a new tab/window.'\"~\"Webpage 'https://bicol-u.edu.ph/' should open in a new tab/window.\"\n",
+    "\"Verify the functionality of the Link Element 'Battle of New Orleans'\"~\"The user is on the webpage 'https://en.wikipedia.org/'\"~\"'1. User navigates to the webpage 'https://en.wikipedia.org/' '' '2. Click on Link Element 'Battle of New Orleans'' '3. Verify if the link url changes to 'https://en.wikipedia.org/wiki/Battle_of_New_Orleans' '4. Verify if the webpage opens in a new tab/window'\"~\"Webpage 'https://en.wikipedia.org/wiki/Battle_of_New_Orleans/' should open in a new tab/window.\"\n",
+    "\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
@@ -208,6 +289,40 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fine Tuning Version\n",
+    "\n",
+    "url = \"placeholder\"\n",
+    "\n",
+    "# Load Model Chain\n",
+    "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\"):\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    model = OllamaLLM(model=model_str)\n",
+    "    chain = prompt | model\n",
+    "    return chain\n",
+    "\n",
+    "# Create Test Case Data\n",
+    "def create_test_cases(data, model_str : str = \"llama3.1\" , template : str = template, url : str = url):\n",
+    "    \n",
+    "    # Load LLM Chain\n",
+    "    chain = load_model_chain(template, model_str)\n",
+    "\n",
+    "    # Return Data\n",
+    "    return_data = []\n",
+    "    \n",
+    "    for item in data:\n",
+    "        return_data.append(chain.invoke({\"question\": str(item), \"url\": url}))\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain(template, model_str)\n",
+    "\n",
+    "    return return_data"
+   ]
   }
  ],
  "metadata": {
