--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -7015,6 +7015,174 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# TODO :\n",
+    "# Polish Conditionals' results (make it more understandable to the llm)\n",
+    "# Consider adding better context to llm prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Back to the drawing board : individual testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Webdriver testing\n",
+    "\n",
+    "def setup_driver():\n",
+    "    try :\n",
+    "        driver = webdriver.Firefox() # Default with Firefox\n",
+    "    except Exception:\n",
+    "        try : \n",
+    "            driver = webdriver.Chrome() # Default with Chrome\n",
+    "        except Exception:\n",
+    "            try : \n",
+    "                driver = webdriver.Edge() # Default with Edge\n",
+    "            except Exception:\n",
+    "                print(\"Error. No usable browser found for scraping\")\n",
+    "    \n",
+    "    return driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Button Element\n",
+    "Name : \n",
+    "Size Attribute : large/small, to be specific : {}\n",
+    "Background Color : \n",
+    "Is Clickable : \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BUTTONS\n",
+    "buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "for button in buttons:\n",
+    "    if button.is_displayed():\n",
+    "        # Button Element Attributes\n",
+    "        button_text = f\"Button Element '{button.text}'\" if (button.text != None and button.text != \"\") else \"Button Element Without Name\"\n",
+    "        button_size = f\"With Size Attribute {button.size}\" if button.size != None else \"Without Size Attribute\"\n",
+    "        button_color = f\"With Background Color {button.value_of_css_property(\"background-color\")}\" if button.value_of_css_property(\"background-color\") != None else \"Without Background Color\"\n",
+    "        button_enabled = \"and the button is Clickable\" if button.is_enabled() else \"and the button is not Clickable\"\n",
+    "        \n",
+    "        # Store Button Element\n",
+    "        store = f\"{button_text} {button_size} {button_color} {button_enabled}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # LINKS\n",
+    "links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "for link in links:\n",
+    "    if link.is_displayed():\n",
+    "        # Link Element Attributes\n",
+    "        link_text = f\"Link Element '{link.text}'\" if (link.text != None and link.text != \"\") else \"Link Element Without Name\"\n",
+    "        link_url = f\"With URL {link.get_attribute('href')}\" if link.get_attribute('href') != None else \"Without URL\"\n",
+    "        # Additional Attributes\n",
+    "        link_rel = f\"With rel attribute {link.get_attribute('rel')}\" if link.get_attribute('rel') != None and link.get_attribute('rel') != \"\" else \"\"\n",
+    "        link_target = f\"With target attribute {link.get_attribute('target')}\" if link.get_attribute('target') != None and link.get_attribute('target') != \"\" else \"\"\n",
+    "        link_download = f\"This is a download link to document {link.get_attribute('download')}\" if link.get_attribute('download') != None and link.get_attribute('download') != \"\" else \"\"\n",
+    "        \n",
+    "        # Store Link Element\n",
+    "        store = f\"{link_text} {link_url} {link_rel} {link_target} {link_download}\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VISIBLE TEXT\n",
+    "# Heading Elements\n",
+    "for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "    headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "    for heading in headings:\n",
+    "        if heading.is_displayed():\n",
+    "            store = f\"Heading Element (h{level}): '{heading.text}'\"\n",
+    "# Paragraph Elements\n",
+    "paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "for paragraph in paragraphs:\n",
+    "    if paragraph.is_displayed():\n",
+    "        store = f\"Paragraph Element: '{paragraph.text}'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INPUT\n",
+    "input_tags = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "for input_tag in input_tags:\n",
+    "    if input_tag.is_displayed():\n",
+    "        # Basic Attributes\n",
+    "        input_field_name = f\"Input Field Element: '{input_tag.get_attribute('name')}'\" if input_tag.get_attribute('name') != None else \"Without Name\"\n",
+    "        input_field_type = f\"With Type {input_tag.get_attribute('type')}\" if input_tag.get_attribute('name') != None else \"Without Type\"\n",
+    "        # Additional Attributes\n",
+    "        input_field_value = f\"With Value {input_tag.get_attribute('value')}\" if input_tag.get_attribute('name') != None else \"Without Value\"\n",
+    "        input_field_placeholder = f\"With Placeholder '{input_tag.get_attribute('placeholder')}'\" if input_tag.get_attribute('name') != None else \"Without Placeholder\"\n",
+    "        input_field_readonly = f\"Is Readonly\" if input_tag.get_attribute('readonly') != None else \"Is Editable\"\n",
+    "        input_field_disabled = f\"Is Not Clickable\" if input_tag.get_attribute('disabled') != None else \"Is Clickable\"\n",
+    "        input_field_required = f\"Is Required\" if input_tag.get_attribute('required') != None else \"Not Required\"\n",
+    "        input_field_autocomplete = f\"Is Autocomplete\" if input_tag.get_attribute('autocomplete') != None else \"Not Autocomplete\"\n",
+    "\n",
+    "        # Store based on type\n",
+    "        if (input_tag.get_attribute('type') == \"submit\"):\n",
+    "            store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")} {input_field_disabled}\"\n",
+    "        else:\n",
+    "            store = f\"{input_field_name} {input_field_type} {input_field_required} {input_field_value} {input_field_placeholder} {input_field_readonly} {input_field_disabled} {input_field_autocomplete}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
