update readme.html, setup for cycle 2, django development and connection to frontend, delete pycache and add to gitignore

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "Some UI elements have a link attached to them and other properties.\n",
     "ONLY output in the following format: \n",
     "\"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
-    "DO NOT output any other text. DO NOT output 'Here are the test cases...', your output should be like the example output below.\n",
+    "DO NOT output any other text. DO NOT output 'Here are the test cases...'\n",
     "\n",
     "Example Input:\n",
     "Link Element: Home with URL : https://bicol-u.edu.ph/\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -227,9 +227,9 @@
      "output_type": "stream",
      "text": [
       "Welcome to Dataset Generator V1\n",
-      "Scraping Finished In : 63298.93684387207, ms\n",
+      "Scraping Finished In : 63689.451932907104, ms\n",
       "This will take a while to complete: Please wait by doing other things. You will receive a message once generation is complete.\n",
-      "Generation Finished In : 4344326.324701309, ms\n",
+      "Generation Finished In : 2275197.4651813507, ms\n",
       "Dataset is Generated as a CSV File. Please rename it before running this notebook again\n"
      ]
     }
