alpaca prompt suggestion

--- a/fine_tuning/fine_tuning_notebook.ipynb
+++ b/fine_tuning/fine_tuning_notebook.ipynb
@@ -103,6 +103,14 @@
     "### Response:\n",
     "{}\"\"\"\n",
     "\n",
+    "## Suggestion:\n",
+    "# prompt = \"\"\" Below is an input that describes a UI element of a website. Generate a test case that appropriately addresses the UI element:\n",
+    "# ### Input:\n",
+    "# {} \n",
+    "# ### Response: \n",
+    "# {} \n",
+    "# \"\"\"\n",
+    "\n",
     "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
     "def formatting_prompts_func(examples):\n",
     "    instructions = examples[\"instruction\"]\n",
