added todo to scraper. added tracker message to generating test cases

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -316,10 +316,13 @@
     "    # Return Data\n",
     "    return_data = []\n",
     "    \n",
+    "    i = 0\n",
+    "    total = len(data)\n",
     "    for item in data:\n",
     "        return_data.append(chain.invoke({\"question\": str(item), \"url\": url}))\n",
     "        # LLM Reset To Free Up Context\n",
     "        chain = load_model_chain(template, model_str)\n",
+    "        print(f\"test case {i} out of {total} generated\")\n",
     "\n",
     "    return return_data"
    ]
