--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -7162,7 +7162,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO : Add multiple outputs from one element"
+   ]
   },
   {
    "cell_type": "code",
