scraper v2 done and ready for dataset generator v2 testing

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -288,7 +288,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "peer_reviewed_template =\"\"\"\n",
+    "Prompt:\n",
+    "*\"You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
+    "\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the following usability aspects:\n",
+    "\n",
+    "Accessibility (keyboard navigation, screen reader support)\n",
+    "Responsiveness (behavior across different screen sizes)\n",
+    "Feedback (hover effects, click responses, error messages)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused)\n",
+    "User experience (clarity of labels, ease of use)\n",
+    "\n",
+    "For each test case, include:\n",
+    "\n",
+    "Objective (What the test aims to verify)\n",
+    "Preconditions (Any setup or conditions required before testing)\n",
+    "Test Steps (Step-by-step actions to perform the test)\n",
+    "Expected Result (Expected outcome if the UI element works correctly)\n",
+    "\n",
+    "Generate test cases in a structured format: \"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\" \"*\n",
+    "DO NOT output 'Here are the test cases...'\n",
+    "\"\"\"\n",
+    "\n",
+    "# Assuming LLM Temperature 0.1\n",
+    "revised_peer_reviewed_template = \"\"\"\n",
+    "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
+    "\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the following usability aspects:\n",
+    "\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Only output the following, separated by a ~:\n",
+    "\n",
+    "Objective (What the test aims to verify)\n",
+    "Preconditions (Any setup or conditions required before testing)\n",
+    "Test Steps (Step-by-step actions to perform the test)\n",
+    "Expected Result (Expected outcome if the UI element works correctly)\n",
+    "\n",
+    "Your output should only be in the following structured format but do not include the format in the output: \"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
+    "DO NOT output anything else but one test case in the said format.\n",
+    "\n",
+    "Here is the UI Element: {ui_element}\n",
+    "The UI Element is from the following website URL : {url}\n",
+    "\"\"\"\n",
+    "\n",
+    "#Suggestions:\n",
+    "# - Consider the attribute attached to the UI element as the attribute acts as a hint in what the test case should focus on."
+   ]
   },
   {
    "cell_type": "code",
