--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -316,7 +316,7 @@
     "revised_peer_reviewed_template = \"\"\"\n",
     "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
     "\n",
-    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the following usability aspects:\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
     "\n",
     "Accessibility (keyboard navigation, screen reader support, etc.)\n",
     "Responsiveness (behavior across different screen sizes, etc.)\n",
@@ -338,24 +338,71 @@
     "The UI Element is from the following website URL : {url}\n",
     "\"\"\"\n",
     "\n",
+    "# Common error exists that can be removed through python string\n",
+    "common_error = \"Objective~Preconditions~Test Steps~Expected Result\"\n",
+    "\n",
     "#Suggestions:\n",
     "# - Consider the attribute attached to the UI element as the attribute acts as a hint in what the test case should focus on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Verify that the Accessibility Button can be navigated to using keyboard navigation and is announced by a screen reader.~The user has accessed the website at https://www.dost.gov.ph/ and has enabled keyboard navigation in their browser settings. The user also has a screen reader software installed and enabled on their device.~1. Press the Tab key repeatedly until the Accessibility Button receives focus.\n",
+      "2. Use the Enter key to click the Accessibility Button.\n",
+      "3. Simultaneously press the Windows key + D (Windows) or Command + Shift + D (Mac) to open the screen reader software and have it announce the button's label.\n",
+      "4. Verify that the screen reader announces the button's label correctly.~The screen reader should announce the button's label, which is likely \"Accessibility Button\", when clicked using keyboard navigation.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fine Tuning Version\n",
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "url = \"placeholder\"\n",
+    "# Dataset Generator Version TESTING\n",
+    "template = \"\"\"\n",
+    "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
+    "\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
+    "\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Only output the following, separated by a ~:\n",
+    "\n",
+    "Objective (What the test aims to verify)\n",
+    "Preconditions (Any setup or conditions required before testing)\n",
+    "Test Steps (Step-by-step actions to perform the test)\n",
+    "Expected Result (Expected outcome if the UI element works correctly)\n",
+    "\n",
+    "Your output should only be in the following structured format but do not include the format in the output: \"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
+    "DO NOT output anything else but one test case in the said format.\n",
+    "\n",
+    "Here is the UI Element: {ui_element}\n",
+    "The UI Element is from the following website URL : {url}\n",
+    "\"\"\"\n",
+    "\n",
+    "common_error = \"Objective~Preconditions~Test Steps~Expected Result\"\n",
+    "\n",
+    "ui_element = \"Clickable Button Element 'Accessibility Button'\"\n",
+    "url = \"https://www.dost.gov.ph/\"\n",
     "\n",
     "# Load Model Chain\n",
-    "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\"):\n",
+    "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\", temperature=0.1):\n",
     "    prompt = ChatPromptTemplate.from_template(template)\n",
-    "    model = OllamaLLM(model=model_str)\n",
+    "    model = OllamaLLM(model=model_str, temperature=temperature)\n",
     "    chain = prompt | model\n",
     "    return chain\n",
     "\n",
@@ -371,12 +418,182 @@
     "    i = 0\n",
     "    total = len(data)\n",
     "    for item in data:\n",
-    "        return_data.append(chain.invoke({\"question\": str(item), \"url\": url}))\n",
+    "        return_data.append(chain.invoke({\"ui_element\": str(item), \"url\": url}))\n",
     "        # LLM Reset To Free Up Context\n",
     "        chain = load_model_chain(template, model_str)\n",
     "        print(f\"test case {i} out of {total} generated\")\n",
     "\n",
-    "    return return_data"
+    "    return return_data\n",
+    "\n",
+    "chain = load_model_chain()\n",
+    "answer = chain.invoke({\"ui_element\": ui_element, \"url\": url})\n",
+    "print(answer.replace(common_error, \"\"))\n",
+    "chain = load_model_chain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Verify that the Accessibility Button can be navigated to using keyboard navigation and is announced by a screen reader.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The user has accessed the website at https://www.dost.gov.ph/ and has enabled keyboard navigation in their browser settings. The user also has a screen reader software installed and enabled on their device.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "1. Press the Tab key repeatedly until the Accessibility Button receives focus.\n",
+      "2. Use the Enter key to click the Accessibility Button.\n",
+      "3. Simultaneously press the Windows key + D (Windows) or Command + Shift + D (Mac) to open the screen reader software and have it announce the button's label.\n",
+      "4. Verify that the screen reader announces the button's label correctly.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The screen reader should announce the button's label, which is likely \"Accessibility Button\", when clicked using keyboard navigation.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_test = answer.replace(common_error, \"\")\n",
+    "split_test = split_test.split(\"~\")\n",
+    "for split in split_test:\n",
+    "    print(split)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Verify that clicking on a link element without name (image) opens the target URL in a new browser tab.\n",
+      "\n",
+      "\n",
+      "The user is on the webpage with the link element, and the device has an active internet connection.\n",
+      "\n",
+      "\n",
+      "1. Navigate to the webpage containing the link element.\n",
+      "2. Use keyboard navigation to focus on the link element.\n",
+      "3. Click on the link element using the mouse or touch input.\n",
+      "4. Verify that a new browser tab opens with the target URL (https://www.dost.gov.ph/77-honor-awards-program-hap-story.html).\n",
+      "5. Check if the original webpage remains open in the background.\n",
+      "\n",
+      "\n",
+      "The new browser tab should be opened with the target URL, and the original webpage should remain active in the background.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Further Testing\n",
+    "\n",
+    "ui_element = \"Link Element Without Name (might be an image) With URL https://www.dost.gov.ph/77-honor-awards-program-hap-story.html With target attribute _blank\"\n",
+    "url = \"https://www.dost.gov.ph/\"\n",
+    "\n",
+    "chain = load_model_chain()\n",
+    "answer = chain.invoke({\"ui_element\": ui_element, \"url\": url})\n",
+    "chain = load_model_chain()\n",
+    "split_test = answer.replace(common_error, \"\")\n",
+    "split_test = split_test.split(\"~\")\n",
+    "for split in split_test:\n",
+    "    print(split)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Resulting Version\n",
+    "- Different (Tested) Prompt\n",
+    "- Added a failsafe substring removal in case LLM commits common error\n",
+    "- Added temperature parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "# Dataset Generator Version TESTING\n",
+    "template = \"\"\"\n",
+    "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a set of functional usability test cases with detailed test scenarios.\n",
+    "\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
+    "\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Only output the following, separated by a ~:\n",
+    "\n",
+    "Objective (What the test aims to verify)\n",
+    "Preconditions (Any setup or conditions required before testing)\n",
+    "Test Steps (Step-by-step actions to perform the test)\n",
+    "Expected Result (Expected outcome if the UI element works correctly)\n",
+    "\n",
+    "Your output should only be in the following structured format but do not include the format in the output: \"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
+    "DO NOT output anything else but one test case in the said format.\n",
+    "\n",
+    "Here is the UI Element: {ui_element}\n",
+    "The UI Element is from the following website URL : {url}\n",
+    "\"\"\"\n",
+    "\n",
+    "common_error = \"Objective~Preconditions~Test Steps~Expected Result\"\n",
+    "\n",
+    "# Load Model Chain\n",
+    "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\", temperature=0.1):\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    model = OllamaLLM(model=model_str, temperature=temperature)\n",
+    "    chain = prompt | model\n",
+    "    return chain\n",
+    "\n",
+    "# Create Test Case Data\n",
+    "def create_test_cases(data, model_str : str = \"llama3.1\" , template : str = template, url : str = url, common_error : str = common_error):\n",
+    "    \n",
+    "    # Load LLM Chain\n",
+    "    chain = load_model_chain(template, model_str)\n",
+    "\n",
+    "    # Return Data\n",
+    "    return_data = []\n",
+    "    \n",
+    "    i = 0\n",
+    "    total = len(data)\n",
+    "    for item in data:\n",
+    "        return_data.append((chain.invoke({\"ui_element\": str(item), \"url\": url})).replace(common_error, \"\"))\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain(template, model_str)\n",
+    "        print(f\"test case {i} out of {total} generated\")\n",
+    "\n",
+    "    return return_data\n"
    ]
   }
  ],
