--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -7827,7 +7827,7 @@
     "            # Store based on type\n",
     "            if (input_tag.get_attribute('type') == \"submit\"):\n",
     "                store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")} {input_field_disabled}\"\n",
-    "                visible_text_inputs.append(store)\n",
+    "                data.append(store)\n",
     "            else:\n",
     "                store = f\"{input_field_disabled} {input_field_name} {input_field_type} {input_field_required}\"\n",
     "                data.append(store)\n",
