--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Version 2: ???"
+    "##### Version 2: Minor Adjustments"
    ]
   },
   {
@@ -204,7 +204,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Table Dataframe Initialization\n",
+    "def dataframe_init(data):\n",
+    "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
+    "    return df\n",
+    "\n",
+    "# CSV Generator\n",
+    "def csv_from_test_case_batches(filename, data):\n",
+    "    cols = dataframe_init(data)\n",
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
+    "\n",
+    "\n",
+    "def create_fine_tuning_dataset(scraped_data, llm_output):\n",
+    "    # Dataset Generator : Resulting Dataset Columns / Parameters\n",
+    "    out_data = llm_output # LLM Output\n",
+    "    in_data = scraped_data # Scraped UI Element\n",
+    "    instruction_data = []\n",
+    "    i = 0\n",
+    "    while (i < len(scraped_data)):\n",
+    "        template = f\"Generate test case for the following UI element:\"\n",
+    "        instruction_data.append(template)\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"output\" : out_data, \n",
+    "            \"input\" : in_data, \n",
+    "            \"instruction\" : instruction_data}\n",
+    "    csv_from_test_case_batches(\"fine_tuning_dataset\", data)\n",
+    "    return dataframe_init(data) \n",
+    "\n",
+    "# System Proper Parameters\n",
+    "def create_table_dataset(llm_output):\n",
+    "    # TODO : After Dataset Generator Development\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = 0\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "\n",
+    "        # Test Case ID\n",
+    "        id.append(i+1)\n",
+    "\n",
+    "        # Test Case Objective\n",
+    "        try:\n",
+    "            objective.append(split_test_case[0])\n",
+    "        except Exception:\n",
+    "            objective.append('error')\n",
+    "\n",
+    "        # Test Case Precondition\n",
+    "        try:\n",
+    "            precondition.append(split_test_case[1])\n",
+    "        except Exception:\n",
+    "            precondition.append('error')\n",
+    "\n",
+    "        # Test Case Steps \n",
+    "        try:\n",
+    "            test_steps.append(split_test_case[2])\n",
+    "        except Exception:\n",
+    "            test_steps.append('error')\n",
+    "\n",
+    "        # Test Case Expected Output\n",
+    "        try:\n",
+    "            expected_result.append(split_test_case[3])\n",
+    "        except Exception:\n",
+    "            expected_result.append('error')\n",
+    "\n",
+    "        # Test Case Actual Result\n",
+    "        actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)   "
+   ]
   },
   {
    "cell_type": "code",
