--- a/fine_tuning/fine_tuning_notebook.ipynb
+++ b/fine_tuning/fine_tuning_notebook.ipynb
@@ -10,13 +10,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "##### Installation and GDrive Setup"
    ]
   },
   {
@@ -26,9 +23,20 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install unsloth\n",
-    "# Also get the latest nightly Unsloth!\n",
-    "!pip uninstall unsloth -y && pip install --upgrade --no-cache-dir --no-deps git+https://github.com/unslothai/unsloth.git"
+    "!pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
+    "!pip install --no-deps cut_cross_entropy unsloth_zoo\n",
+    "!pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
+    "!pip install --no-deps unsloth\n",
+    "\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Fine-Tuning Setup"
    ]
   },
   {
@@ -37,41 +45,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting Up Model and Tokenizer to Llama 3.1 8B\n",
-    "\n",
     "from unsloth import FastLanguageModel\n",
     "import torch\n",
+    "\n",
+    "## Setup\n",
     "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
     "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
     "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
     "\n",
-    "# 4bit pre quantized models we support for 4x faster downloading + no OOMs.\n",
-    "fourbit_models = [\n",
-    "    \"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",      \n",
-    "    \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\",\n",
-    "    \"unsloth/Meta-Llama-3.1-70B-bnb-4bit\",\n",
-    "    \"unsloth/Meta-Llama-3.1-405B-bnb-4bit\",    \n",
-    "] # More models at https://huggingface.co/unsloth\n",
-    "\n",
+    "## Load Llama 3.1\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = dtype,\n",
-    "    load_in_4bit = load_in_4bit, \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model Settings\n",
+    "    load_in_4bit = load_in_4bit,\n",
+    "    # token = \"hf_...\", # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
+    ")\n",
     "\n",
+    "## Default Unsloth Settings\n",
     "model = FastLanguageModel.get_peft_model(\n",
     "    model,\n",
-    "    r = 8, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128 # 16\n",
+    "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
     "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
     "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
     "    lora_alpha = 16,\n",
@@ -81,17 +75,9 @@
     "    random_state = 3407,\n",
     "    use_rslora = False,  # We support rank stabilized LoRA\n",
     "    loftq_config = None, # And LoftQ\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prompt Settings and Dataset Loading\n",
+    ")\n",
     "\n",
+    "## Data Loading and Alpaca Prompt Setup (Default Prompt Setup for Llama 3.1)\n",
     "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
     "### Instruction:\n",
@@ -102,14 +88,6 @@
     "\n",
     "### Response:\n",
     "{}\"\"\"\n",
-    "\n",
-    "## Suggestion:\n",
-    "# prompt = \"\"\" Below is an input that describes a UI element of a website. Generate a test case that appropriately addresses the UI element:\n",
-    "# ### Input:\n",
-    "# {} \n",
-    "# ### Response: \n",
-    "# {} \n",
-    "# \"\"\"\n",
     "\n",
     "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
     "def formatting_prompts_func(examples):\n",
@@ -125,20 +103,11 @@
     "pass\n",
     "\n",
     "from datasets import load_dataset\n",
-    "dataset = load_dataset('csv', data_files=\"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/columns_cebu_international_school_modified.csv\", split = \"train\")\n",
-    "# dataset = load_dataset(\"yahma/alpaca-cleaned\", split = \"train\")\n",
-    "# dataset = load_dataset(\"<path_to_dataset>\", split = \"train\")\n",
-    "dataset = dataset.map(formatting_prompts_func, batched = True,)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setting Up Trainer\n",
+    "dataset_location = \"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/fine_tuning_cycle_1.csv\"\n",
+    "dataset = load_dataset('csv', data_files=dataset_location, split = \"train\")\n",
+    "dataset = dataset.map(formatting_prompts_func, batched = True,)\n",
     "\n",
+    "## Trainer Setup\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
     "from unsloth import is_bfloat16_supported\n",
@@ -172,42 +141,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Training Proper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Show current memory stats\n",
+    "# @title Show current memory stats\n",
     "gpu_stats = torch.cuda.get_device_properties(0)\n",
     "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
     "max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
     "print(f\"GPU = {gpu_stats.name}. Max memory = {max_memory} GB.\")\n",
-    "print(f\"{start_gpu_memory} GB of memory reserved.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training\n",
-    "trainer_stats = trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Show final memory and time stats\n",
+    "print(f\"{start_gpu_memory} GB of memory reserved.\")\n",
+    "\n",
+    "trainer_stats = trainer.train()\n",
+    "\n",
+    "# @title Show final memory and time stats\n",
     "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
     "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
-    "used_percentage = round(used_memory         /max_memory*100, 3)\n",
-    "lora_percentage = round(used_memory_for_lora/max_memory*100, 3)\n",
+    "used_percentage = round(used_memory / max_memory * 100, 3)\n",
+    "lora_percentage = round(used_memory_for_lora / max_memory * 100, 3)\n",
     "print(f\"{trainer_stats.metrics['train_runtime']} seconds used for training.\")\n",
-    "print(f\"{round(trainer_stats.metrics['train_runtime']/60, 2)} minutes used for training.\")\n",
+    "print(\n",
+    "    f\"{round(trainer_stats.metrics['train_runtime']/60, 2)} minutes used for training.\"\n",
+    ")\n",
     "print(f\"Peak reserved memory = {used_memory} GB.\")\n",
     "print(f\"Peak reserved memory for training = {used_memory_for_lora} GB.\")\n",
     "print(f\"Peak reserved memory % of max memory = {used_percentage} %.\")\n",
@@ -215,22 +178,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Initial Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple Testing\n",
-    "\n",
     "# alpaca_prompt = Copied from above\n",
     "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
     "inputs = tokenizer(\n",
     "[\n",
     "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction # \"Generate a test case\" \"Continue the fibonnaci sequence.\"\n",
-    "        \"Link Element : 'Lorem Details' with URL : example.com/lorem-details\", # input #  \"Link Element : 'Lorem' with URL : example.com/lorem-details\" \"1, 1, 2, 3, 5, 8\"\n",
+    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
+    "        \"Link Element : \", # input\n",
+    "        \"\", # output - leave this blank for generation!\n",
+    "    ),\n",
+    "\n",
+    "    alpaca_prompt.format(\n",
+    "        \"Generate a test case for the following UI Element:\", # instruction\n",
+    "        \"Button Element : \", # input\n",
+    "        \"\", # output - leave this blank for generation!\n",
+    "    ),\n",
+    "\n",
+    "    alpaca_prompt.format(\n",
+    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
+    "        \"Header Element : \", #\n",
+    "        \"\", # output - leave this blank for generation!\n",
+    "    ),\n",
+    "\n",
+    "    alpaca_prompt.format(\n",
+    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
+    "        \"Input Element : \", #\n",
     "        \"\", # output - leave this blank for generation!\n",
     "    )\n",
+    "\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
     "outputs = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
@@ -238,25 +225,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# alpaca_prompt = Copied from above\n",
-    "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-    "inputs = tokenizer(\n",
-    "[\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction # \"Continue the fibonnaci sequence.\"\n",
-    "        \"Link Element : 'Lorem Details' with URL : example.com/lorem-details\", # input # \"1, 1, 2, 3, 5, 8\"\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    )\n",
-    "], return_tensors = \"pt\").to(\"cuda\")\n",
-    "\n",
-    "from transformers import TextStreamer\n",
-    "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)"
+    "##### Saving Model"
    ]
   },
   {
@@ -265,100 +237,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lora Model Saving (Saves a lot of storage)\n",
+    "## LORA Saving\n",
+    "if False:\n",
+    "    model.save_pretrained(\"lora_model\")  # Local saving\n",
+    "    tokenizer.save_pretrained(\"lora_model\")\n",
+    "    # model.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
+    "    # tokenizer.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
     "\n",
-    "model.save_pretrained(\"lora_model\") # Local saving\n",
-    "tokenizer.save_pretrained(\"lora_model\")\n",
-    "# model.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
-    "# tokenizer.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading Lora Model\n",
-    "\n",
-    "if True:\n",
-    "    from unsloth import FastLanguageModel\n",
-    "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "        model_name = \"lora_model\", # YOUR MODEL YOU USED FOR TRAINING\n",
-    "        max_seq_length = max_seq_length,\n",
-    "        dtype = dtype,\n",
-    "        load_in_4bit = load_in_4bit,\n",
-    "    )\n",
-    "    FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-    "\n",
-    "# alpaca_prompt = You MUST copy from above!\n",
-    "\n",
-    "inputs = tokenizer(\n",
-    "[\n",
-    "    alpaca_prompt.format(\n",
-    "        \"What is a famous tall tower in Paris?\", # instruction\n",
-    "        \"\", # input\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    )\n",
-    "], return_tensors = \"pt\").to(\"cuda\")\n",
-    "\n",
-    "from transformers import TextStreamer\n",
-    "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 16bit/4bit for vllm\n",
-    "\n",
-    "# Merge to 16bit\n",
-    "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_16bit\",)\n",
-    "if False: model.push_to_hub_merged(\"hf/model\", tokenizer, save_method = \"merged_16bit\", token = \"\")\n",
-    "\n",
-    "# Merge to 4bit\n",
-    "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_4bit\",)\n",
-    "if False: model.push_to_hub_merged(\"hf/model\", tokenizer, save_method = \"merged_4bit\", token = \"\")\n",
-    "\n",
-    "# Just LoRA adapters\n",
-    "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"lora\",)\n",
-    "if False: model.push_to_hub_merged(\"hf/model\", tokenizer, save_method = \"lora\", token = \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Saving GGUF (uses a lot of storage)\n",
-    "\n",
+    "## GGUF Saving \n",
     "# Save to 8bit Q8_0\n",
-    "if True: model.save_pretrained_gguf(\"model\", tokenizer,)\n",
-    "# # Remember to go to https://huggingface.co/settings/tokens for a token!\n",
-    "# # And change hf to your username!\n",
-    "# if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, token = \"\")\n",
+    "if False: model.save_pretrained_gguf(\"model\", tokenizer,)\n",
+    "# Remember to go to https://huggingface.co/settings/tokens for a token!\n",
+    "# And change hf to your username!\n",
+    "if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, token = \"\")\n",
     "\n",
-    "# # Save to 16bit GGUF\n",
-    "# if False: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"f16\")\n",
-    "# if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, quantization_method = \"f16\", token = \"\")\n",
+    "# Save to 16bit GGUF\n",
+    "if False: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"f16\")\n",
+    "if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, quantization_method = \"f16\", token = \"\")\n",
     "\n",
-    "# # Save to q4_k_m GGUF\n",
-    "# if False: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"q4_k_m\")\n",
-    "# if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, quantization_method = \"q4_k_m\", token = \"\")\n",
-    "\n",
-    "# # Save to multiple GGUF options - much faster if you want multiple!\n",
-    "# if False:\n",
-    "#     model.push_to_hub_gguf(\n",
-    "#         \"hf/model\", # Change hf to your username!\n",
-    "#         tokenizer,\n",
-    "#         quantization_method = [\"q4_k_m\", \"q8_0\", \"q5_k_m\",],\n",
-    "#         token = \"\",\n",
-    "#     )"
+    "# Save to q4_k_m GGUF\n",
+    "if True: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"q4_k_m\")\n",
+    "if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, quantization_method = \"q4_k_m\", token = \"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
